[project]
name = "langgraph-livekit-agents"
version = "0.0.1"
description = "LiveKit LangGraph adapter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.15",
    "langchain-openai>=0.3.1",
    "langgraph>=0.2.66",
    "livekit-agents[deepgram,openai,cartesia,silero,turn-detector]~=1.0",
    "python-dotenv>=1.0.1",
]
